# bitshuffle

./: .bazelrc  .clang-format  .clang-tidy  BUILD.bazel  LICENSE-APACHE  LICENSE-MIT  README.md  WORKSPACE
.github/workflows/: main.yml
src/: bitshuffle.c  bitshuffle.h
tests/: bitshuffle_benchmark.cc  bitshuffle_test.cc
